create-dns-lookup-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: snehil-dnslookup
spec:
  containers:
  - name: dnsllokup
    image: tutum/dnsutils
