create-tolerant-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prod
spec:
  selector:
    matchLabels:
      app: prod-app
  replicas: 5
  template:
    metadata:
      name: prod-pods
      labels:
        app: prod-app
    spec:
      containers:
      - name: prod
        image: busybox
        command: ["sleep", "99999"]
      tolerations:
      - key: node-type
        operator: Equal
        value: production
        effect: NoSchedule
