fortune-client.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: deploymentwithinit
spec:
  selector:
    matchLabels:
      app: deploymentwithinit
  replicas: 2
  template:
    metadata:
      name: pod-with-init
      labels:
        app: deploymentwithinit
    spec:
      containers:
      - name: fortune-main-app
        image: luksa/fortune
        volumeMounts:
        - mountPath: /var/htdocs
          name: html
      - name: nginx-alpine
        image: nginx:alpine
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
          readOnly: True 
        ports:
        - containerPort: 80
          protocol: TCP
      volumes:
      - name: html
        emptyDir: {}
