create-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snehil-headless
spec:
  selector:
    app: frontend
  clusterIP: None
  ports:
  - port: 80
    targetPort: 8080
