gke-ingress-config.yaml
apiVersion: v1
kind: Service
...
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
...
