create-ingress-with-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: snehil-ingress
spec:
  tls:
  - hosts:
    - snehilblog.com
    secretName: tls-secret
  rules:
  - host: snehilblog.com
    http:
      paths:
      - path: /
        backend:
          serviceName: front-end-nodeport
          servicePort: 80
