ingress-create.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-node
spec:
  rules:
  - host: snehilblog.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: front-end-nodeport
          servicePort: 80
